--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script type="module" src="https://pyscript.net/releases/2023.11.1/core.js"></script>
 </head>
 <body>
-    <py-script src=“./main.py”></py-script>
+    <py-script src=“https://github.com/y22emc2/Chri.github.io/blob/main/main.py”></py-script>
 </body>
   
 </html>
